# docs/api_swagger.yaml
@@ -272,6 +272,8 @@ definitions:
         $ref: '#/definitions/schema.Company'
       company_code:
         type: string
+      cost_center:
+        type: string
       created_by:
         type: string
       createdAt:
@@ -288,9 +290,21 @@ definitions:
         type: integer
       expiredAt:
         type: string
+      fiscal_period:
+        type: string
+      fiscal_year:
+        type: string
       fullname:
         type: string
+      grade_rate:
+        type: string
+      harvester_code:
+        type: string
       id:
+        type: string
+      job_pos:
+        type: string
+      mandt:
         type: string
       nickname:
         type: string
@@ -304,6 +318,8 @@ definitions:
         type: string
       status:
         type: boolean
+      type:
+        type: string
       updatedAt:
         type: string
       user:
@@ -438,22 +454,60 @@ definitions:
       username:
         type: string
     required:
-    - address
-    - application
     - code
-    - company_id
-    - department
-    - division
     - email
-    - fullname
-    - nickname
-    - nik
-    - office_number
     - password
-    - phone_number
-    - picture
-    - role
-    - role_application
+    - username
+    type: object
+  schema.JsonEmployeeUpdate:
+    properties:
+      address:
+        type: string
+      application:
+        items:
+          type: string
+        type: array
+      code:
+        type: string
+      company_id:
+        type: string
+      department:
+        type: string
+      division:
+        items:
+          type: string
+        type: array
+      email:
+        type: string
+      fullname:
+        type: string
+      nickname:
+        type: string
+      nik:
+        type: string
+      office_number:
+        type: string
+      password:
+        type: string
+      phone_number:
+        type: string
+      picture:
+        type: string
+      role:
+        items:
+          type: string
+        type: array
+      role_application:
+        items:
+          type: string
+        type: array
+      user_id:
+        type: string
+      username:
+        type: string
+    required:
+    - code
+    - email
     - username
     type: object
   schema.MetaAccount:
@@ -569,15 +623,31 @@ definitions:
         $ref: '#/definitions/schema.MetaCompany'
       companyCode:
         type: string
+      costCenter:
+        type: string
       department:
         type: string
       email:
         type: string
+      employeeType:
+        type: string
       expired:
         type: integer
+      fiscalPeriod:
+        type: string
+      fiscalYear:
+        type: string
       fullName:
         type: string
+      gradeRate:
+        type: string
+      harvesterCode:
+        type: string
       id:
+        type: string
+      jobPos:
+        type: string
+      mandt:
         type: string
       nickName:
         type: string
@@ -588,6 +658,8 @@ definitions:
       phoneNumber:
         type: string
       picture:
+        type: string
+      userCode:
         type: string
       username:
         type: string
@@ -1350,7 +1422,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: USER ID OR USER Code
+      - description: EMPLOYEE ID OR EMPLOYEE Code
         in: path
         name: id
         required: true
@@ -1361,7 +1433,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schema.MetaUser'
+            $ref: '#/definitions/schema.MetaEmployee'
       summary: Get Meta User By ID or Code
       tags:
       - Employee
@@ -1377,7 +1449,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: USER ID OR USER Code
+      - description: EMPLOYEE ID OR EMPLOYEE Code
         in: path
         name: id
         required: true
@@ -1387,7 +1459,7 @@ paths:
         name: Register
         required: true
         schema:
-          $ref: '#/definitions/schema.JsonEmployeeCreate'
+          $ref: '#/definitions/schema.JsonEmployeeUpdate'
       produces:
       - application/json
       responses:
@@ -1669,11 +1741,35 @@ paths:
       summary: User New
       tags:
       - User Credential
+  /user_profile:
+    get:
+      consumes:
+      - application/json
+      description: User Profile All
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/schema.User'
+            type: array
+      summary: User Profile All
+      tags:
+      - User Credential
   /user_profile/{id}:
     get:
       consumes:
       - application/json
-      description: User New
+      description: User Profile
       parameters:
       - default: Bearer <Add access token here>
         description: Insert your access token
@@ -1692,8 +1788,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schema.User'
-      summary: User New
+            $ref: '#/definitions/schema.MetaUser'
+      summary: User Profile
       tags:
       - User Credential
 swagger: "2.0"
